fix: 대출 현황 차트 날짜 오류 수정